@@ -15,14 +15,37 @@ between one and the other is easy.
 
 You can download the keymap on the
 [releases page](https://github.com/mkende/ergodox_bepo_tm_style/releases) or you
-can build it yourself with
+can build it yourself.
+
+## Building the firmware
+
+Set up your python environment
+
+```sh
+sudo apt-get install pipx
+pipx install qmk
+git clone --recurse-submodules https://github.com/mkende/ergodox_bepo_tm_style.git
+cd ergodox_bepo_tm_style
+qmk setup
+```
+
+During the qmk setup, choose to keep the current `qmk_firmware` and to continue.
+
+Then, you can build the firmware with the following command if you have a legacy
+Ergodox EZ keyboard:
 
 ```sh
 qmk compile -j 12 -kb ergodox_ez -km bepo_tm_style
 ```
 
-The latter, requires that you have set-up the `qmk` CLI tool. See the
-[QMK Guide](https://docs.qmk.fm/#/newbs_getting_started) if needed.
+Or, if you have a newer STM32 based one, you can use the following command:
+
+```sh
+qmk compile -j 12 -kb zsa/ergodox_ez/stm32 -km bepo_tm_style
+```
+
+See the [QMK Guide](https://docs.qmk.fm/#/newbs_getting_started) for more
+details.
 
 The firmware can then be flashed with the following command for example:
 
@@ -31,6 +54,26 @@ teensy_loader_cli --mcu=TEENSY2 -w ergodox_ez_base_bepo_tm_style.hex
 ```
 
 Which requires the Teensy CLI program.
+
+## OS Specific behavior
+
+The layout has some OS specific behavior:
+
+-   On MacOS, it uses `ctrl+c/x/v` for copy/cut/paste, instead of the older
+    shortcut used on other systems (which have the advantage of not depending on
+    the current keymap). So the shortcut function will work only with a Bépo
+    layout at the system level.
+
+    In addition, the sleep function is sent with `gui+shift+power`.
+
+    Note that it is expected that you will switch the gui and control keys at
+    the OS level when using this keyboard layout on a MacOS.
+
+-   On Linux, the sleep function is sent with `ctrl+shift+L` which locks the
+    computer on most systems (otherwise a shortcut can be added in the settings
+    of your Window Manager).
+
+-   On Windows, the sleep function is sent with the `Sleep` media key.
 
 ## Variants
 
@@ -48,15 +91,3 @@ folder intead of the `keyboards/ergodox_ez` folder used by the legacy variants.
 
 The layout is meant to work with an Ergodox EZ *original* (neither *shine* nor
 *glow*). However it will probably work with them too.
-
-### Keymaps
-
-The `_no_sleep` variant of the keymap does not have the *sleep* key in the upper
-left corner. Instead it has a ctrl + alt + l shortcut.
-
-The `_macos` variant has the same change as the `no_sleep` one and, in addition,
-it also uses the classical `CTRL+x/c/v` shortcuts for the cut/copy/paste keys in
-the `FN` layer, as the shortcuts used in the default layout are not recognized
-under MacOS. It is then expected that the `control` and `command` keys are
-swapped at the OS level. This let the layout be the most functionnal under other
-operating systems too.
