@@ -9,6 +9,7 @@ DYNAMIC_MACRO_ENABLE = yes # Dynamic macro recording
 LTO_ENABLE           = yes # Link time optimization (forces NO_ACTION_MACRO and NO_ACTION_FUNCTION in config.h)
 NO_USB_STARTUP_CHECK = yes # Don't do USB startup checks, might help with some KVM.
 CAPS_WORD_ENABLE     = yes # Activate the QK_CAPS_WORD_TOGGLE key.
+OS_DETECTION_ENABLE  = yes # Activate the detected_host_os() method.
 
 BOOTMAGIC_ENABLE   = yes # We don’t need bootmagic but the zsa version of the firmware needs it.
 KEY_LOCK_ENABLE    = no  # Disable the QK_LOCK key
