@@ -1,4 +1,0 @@
-#define NO_SLEEP_MODE
-#define MACOS_MODE
-
-#include "../bepo_tm_style/keymap.c"
