@@ -1,3 +1,0 @@
-#define NO_SLEEP_MODE
-
-#include "../../../../ergodox_ez/keymaps/bepo_tm_style/keymap.c"
