@@ -1,5 +1,0 @@
-{
-    "modules": [
-        "zsa/defaults"
-    ]
-}
