@@ -1,5 +1,12 @@
 Changelog for the bépo "TypeMatrix style" layout for the Ergodox EZ keyboard
 
+v8 - ??
+ - Fix the copy/paste shortcut on the MacOS variant.
+ - Drop the MacOS variant and use OS detection instead to use the correct
+   shortcuts.
+ - Drop the no_sleep variant and instead use OS detection to emit the correct
+   sleep shortcut.
+
 v7 - 2025-10-12
  - Different tuning of the mouse keys
  - Adding support for the stm32 Ergodox EZ
